--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
+    "homepage": "https://Sudharsan-011.github.io/RBAC_UI",
+
     "name": "rbac-ui",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
-    },
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
     "dependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.7",
+        "gh-pages": "^6.2.0",
         "postcss": "^8.4.49",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
